# uncovr

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  LICENSE  README.md  TOKEN_DICTIONARY.md  deny.toml  plans.md  v0.3.0_SUMMARY.md
benches/: README.md  framework.rs
docs/: MIGRATION_ENDPOINT_API.md  package.json
docs/.vitepress/: config.ts
docs/docs/: index.md
docs/docs/explanations/: middleware.md  project-structure.md  responses.md  routes.md
docs/docs/get-started/: index.md  installation.md
docs/docs/tutorials/: by-example.md  quickstart.md
examples/: README.md
examples/api/: Cargo.toml  README.md
examples/api/src/: main.rs
examples/api/src/routes/: echo.rs  hello.rs  large.rs  ping.rs  users.rs
examples/auth-jwt/: .env  Cargo.toml  users.db
examples/auth-jwt/migrations/: 20250101000000_create_users_table.sql
examples/auth-jwt/src/: main.rs  routes.rs
examples/auth-jwt/src/middleware/: auth.rs
examples/auth-jwt/src/user/: apis.rs  handlers.rs  mod.rs
examples/auth-jwt/src/utils/: db.rs  jwt.rs  mod.rs  password.rs  state.rs
examples/hello-api/: Cargo.toml  README.md
examples/hello-api/src/: main.rs  meta.rs
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: main.rs
examples/nested-services/: README.md
examples/routes/: Cargo.toml
examples/routes/src/: main.rs
examples/simple/: README.md
examples/url-shortner/: Cargo.toml
examples/url-shortner/src/: fun.rs  main.rs
examples/url-shortner/src/url/: apis.rs  handlers.rs
src/: lib.rs  prelude.rs
src/api/: api.rs  mod.rs  response.rs
src/config/: app.rs  logging.rs  meta.rs  mod.rs
src/context/: context.rs
src/logging/: mod.rs
src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs
src/openapi/: config.rs  docs.rs  mod.rs
src/server/: builder.rs  endpoint.rs  mod.rs  params.rs  router.rs
src/static/: docs.html
src/testing/: response.rs
