[package]
name = "uncovr"
version = "0.2.0"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "A modular microbackend framework for building type-safe REST APIs with automatic OpenAPI documentation and minimal boilerplate"
license = "MIT"
repository = "https://github.com/erickweyunga/uncovr"
homepage = "https://github.com/erickweyunga/uncovr"
documentation = "https://docs.rs/uncovr"
readme = "README.md"
keywords = ["microbackend", "api", "modular", "openapi", "rest"]
categories = ["web-programming::http-server", "web-programming", "api-bindings"]
rust-version = "1.85.0"
exclude = [
    "examples/",
    "scripts/",
    ".github/",
    ".gitignore",
    "docs/",
]

[workspace]
members = [".", "examples/api", "examples/auth-jwt", "examples/routes", "examples/url-shortner"]
resolver = "2"

[features]
default = ["cors", "logging"]
cors = ["tower-http/cors"]
logging = ["tower-http/trace"]

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "macros", "time"] }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# HTTP & Server dependencies
axum = { version = "0.7.4", features = [
    "json",
    "query",
    "multipart",
    "matched-path",
    "original-uri"
], optional = false }
http = "1.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace", "compression-gzip", "compression-br"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

# OpenAPI dependencies
aide = { version = "0.13.0", default-features = false, features = ["axum", "macros", "redoc", "scalar"] }
schemars = { version = "0.8.16", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"

[[bench]]
name = "framework"
harness = false
