[package]
name = "uncovr"
version = "0.2.7"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Modular, type-safe, developer-friendly backend framework for Rust with automatic OpenAPI documentation"
license = "MIT"
repository = "https://github.com/erickweyunga/uncovr"
homepage = "https://github.com/erickweyunga/uncovr"
documentation = "https://docs.rs/uncovr"
readme = "README.md"
keywords = ["backend", "api", "framework", "openapi", "type-safe"]
categories = ["web-programming::http-server", "web-programming", "asynchronous"]
rust-version = "1.85.0"
exclude = [
    "examples/",
    "scripts/",
    ".github/",
    ".gitignore",
    "docs/",
]

[workspace]
members = [".", "examples/hello-world"]
resolver = "2"

[features]
default = ["cors", "logging"]
cors = ["tower-http/cors"]
logging = ["tower-http/trace"]
validation = ["dep:validator"]
testing = ["dep:bytes"]

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "macros", "time"] }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"

# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# HTTP & Server dependencies
axum = { version = "0.7.4", features = [
    "json",
    "query",
    "multipart",
    "matched-path",
    "original-uri"
], optional = false }
http = "1.0"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace", "compression-gzip", "compression-br"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

# OpenAPI dependencies
aide = { version = "0.13.0", default-features = false, features = ["axum", "macros", "redoc", "scalar"] }
schemars = { version = "0.8.16", features = ["derive"] }

# Validation (optional)
validator = { version = "0.18", features = ["derive"], optional = true }

# Testing utilities (optional)
bytes = { version = "1.5", optional = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"

[[bench]]
name = "framework"
harness = false
