[package]
name = "uncovr"
version = "0.2.7"
edition = "2024"
authors = ["Eric Kweyunga <maverickweyunga@gmail.com>"]
description = "Modular, type-safe, developer-friendly backend framework for Rust with automatic OpenAPI documentation"
license = "MIT"
repository = "https://github.com/erickweyunga/uncovr"
homepage = "https://github.com/erickweyunga/uncovr"
documentation = "https://docs.rs/uncovr"
readme = "README.md"
keywords = ["backend", "api", "framework", "openapi", "type-safe"]
categories = ["web-programming::http-server", "web-programming", "asynchronous"]
rust-version = "1.85.0"
exclude = [
    "examples/",
    "scripts/",
    ".github/",
    ".gitignore",
    "docs/",
]

[workspace]
members = [".", "examples/hello-world", "examples/auth-example"]
resolver = "2"

[features]
default = ["cors", "logging"]
cors = ["tower-http/cors"]
logging = ["tower-http/trace"]
validation = ["dep:validator"]
testing = ["dep:bytes"]

[dependencies]
# OpenAPI dependencies
aide = { version = "0.13", default-features = false, features = ["axum", "macros", "redoc", "scalar"] }
async-trait = "0.1"

# HTTP & Server dependencies
axum = { version = "0.7", features = [
    "json",
    "query",
    "multipart",
    "matched-path",
    "original-uri"
] }

# Testing utilities (optional)
bytes = { version = "1", optional = true }

# Core dependencies
futures = "0.3"
http = "1"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "time"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br"] }
tower-layer = "0.3"
tower-service = "0.3"

# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4"] }

# Validation (optional)
validator = { version = "0.18", features = ["derive"], optional = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"

[[bench]]
name = "framework"
harness = false
