[package]
name = "auth-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum_session = "0.17.1"
bcrypt = "0.16.0"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls", "chrono", "macros"] }
tokio = "1.48.0"
uncovr = { version = "0.2.0", path = "../.." }
